user now can send image when chatting